objects/RSS_Feed_Related_Object__c.object
<CustomObject>
    <description>Allows you to link feeds to Accounts, Contacts, Opportunities, Campaigns</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related RSS Feeds</relationshipLabel>
        <relationshipName>RSS_Feed_Related_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related RSS Feeds</relationshipLabel>
        <relationshipName>RSS_Feed_Related_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related RSS Feeds</relationshipLabel>
        <relationshipName>RSS_Feed_Related_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related RSS Feeds</relationshipLabel>
        <relationshipName>RSS_Feed_Related_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSS_Feed__c</fullName>
        <label>RSS Feed</label>
        <referenceTo>RSS_Feed__c</referenceTo>
        <relationshipLabel>Related Objects</relationshipLabel>
        <relationshipName>RSS_Feed_Related_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Object_Id__c</fullName>
        <formula>IF( NOT(OR( Account__c = &apos;&apos;, ISNULL(Account__c))) , Account__c , 
IF( NOT(OR( Campaign__c = &apos;&apos;, ISNULL(Campaign__c))) , Campaign__c, 
IF( NOT(OR( Contact__c = &apos;&apos;, ISNULL(Contact__c ))) , Contact__c, 
IF( NOT(OR( Opportunity__c = &apos;&apos;, ISNULL(Opportunity__c ))) , Opportunity__c, 
Contact__c ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <formula>IF( NOT(OR( Account__c  = &apos;&apos;, ISNULL(Account__c))) ,  Account__r.Name , 
 IF( NOT(OR(  Campaign__c = &apos;&apos;, ISNULL(Campaign__c))) ,  Campaign__r.Name , 
 IF( NOT(OR(   Contact__c = &apos;&apos;, ISNULL(Contact__c ))) ,  Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName , 
 IF( NOT(OR(    Opportunity__c = &apos;&apos;, ISNULL(Opportunity__c ))) ,  Opportunity__r.Name , 
Contact__c ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <formula>IF( NOT(OR( Account__c  = &apos;&apos;, ISNULL(Account__c))) , &apos;Account&apos;, 
 IF( NOT(OR(  Campaign__c = &apos;&apos;, ISNULL(Campaign__c))) , &apos;Campaign&apos;, 
 IF( NOT(OR(   Contact__c = &apos;&apos;, ISNULL(Contact__c ))) , &apos;Contact&apos;, 
 IF( NOT(OR(    Opportunity__c = &apos;&apos;, ISNULL(Opportunity__c ))) , &apos;Opportunity&apos;, 
Contact__c ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <label>RSS Feed Related Object</label>
    <nameField>
        <displayFormat>OBJ - {000000}</displayFormat>
        <label>RSS Feed Related Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSS Feed Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>